Fix invisible reCAPTCHA layering; Close #142

--- a/src/assets/styles/module/ninja-forms/_ninja-forms.scss
+++ b/src/assets/styles/module/ninja-forms/_ninja-forms.scss
@@ -108,6 +108,14 @@
     }
 }
 
+// reCAPTCHA layering fix
+
+.grecaptcha-badge {
+    & {
+        z-index: 999;
+    }
+}
+
 /* ------------------------------------------------------------------------ *\
  * Opinionated Tweaks
 \* ------------------------------------------------------------------------ */
